--- a/about.html
+++ b/about.html
@@ -7,80 +7,76 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <title>Theory of change</title>
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href="index.html">Hem</a></li>
-        <li><a href="about.html">Om oss</a></li>
+        <li><a href="index.html">Spela</a></li>
+        <li><a href="about.html">Om</a></li>
       </ul>
     </nav>
-    <main class="about-container">
-      <div class="project-header">
-        <h2>Om projektet och oss</h2>
-        <img src="images/alice.png" alt="" />
-      </div>
-      <div class="project-info">
-        <h3>Projektbeskrivning</h3>
-        <p>
-          -Tillverka en fristående digital upplevelse baserat på årets tema.
+    <main>
+      <div class="project-wrapper">
+        <h1>Projektbeskrivning</h1>
+        <p class="project-text">
+          -Tillverka en fristående digital upplevelse baserat på årets tema.<br />
           -Varje disciplin ska få chansen att synas och tillföra sin specialitet
-          till projektet. -Slutprodukten ska existera på en för ändamålet byggd
-          webbplats. -Sammanslaget är alltid ett goodwillprojekt med en riktig
-          kund. -YRGO och studenterna tar inte ställning till kundens
-          värderingar.
+          till projektet.<br />
+          -Slutprodukten ska existera på en för ändamålet byggd webbplats.<br />
+          -Sammanslaget är alltid ett goodwillprojekt med en riktig kund.<br />
         </p>
       </div>
-      <div class="logo-container">
-        <img
-          class="logo-img"
-          src="images/logo.png"
-          alt="logo for björkå frihet"
-        />
-        <p>
-          Kunden är BjörkåFrihet <br />
-          Gruppens tolkning av theory of change: Förstå individens miljöpåverkan
-          på ett roligare sätt genom ett spel.
-        </p>
-      </div>
-      <div class="card-container">
-        <div class="card-one">
-          <img class="about-img" src="images/alice.png" alt="web developer" />
-          <h3>Alice</h3>
-          <p>
-            Studerar webbutveckling. <br />
+
+      <div class="about-wrapper">
+        <div class="card">
+          <img class="card-img" src="images/alice.png" />
+          <h2>Alice Nyberg</h2>
+          <h3>Studerar webbutveckling</h3>
+          <p class="text">
             Möjliggjort att spelet kan existera på webben samt arbeta med
             interaktivitet och implementation.
           </p>
         </div>
-        <div class="card-two">
-          <img class="about-img" src="images/gabriel-joella.png" alt="" />
-          <h3>Gabriel och Joella</h3>
-          <p>
-            Studerar UX-design. <br />
+        <div class="card">
+          <img class="card-img" src="images/gabriel-joella.png" />
+          <h2>Gabriel Göransson & Joella Jantzen</h2>
+          <h3>Studerar UX-design</h3>
+          <p class="text">
             Lett idégenerering och designprocess, säkerställa att webbplats och
             bidrag är lätta att använda.
           </p>
         </div>
-        <div class="card-three">
-          <img class="about-img" src="images/carl.png" alt="" />
-          <h3>Carl</h3>
-          <p>
-            Studerar Game Creator Programmer. <br />
+        <div class="card">
+          <img class="card-img" src="images/carl.png" />
+          <h2>Carl Christensen</h2>
+          <h3>Studerar Game Creator Programmer</h3>
+          <p class="text">
             Har utvecklat interaktivitet och implementera tillverkade delar.
           </p>
         </div>
-        <div class="card-four">
-          <img class="about-img" src="images/olivia.png" alt="" />
-          <h3>Olivia</h3>
-          <p>
-            Studerar Game Creator Artist. <br />
+        <div class="card">
+          <img class="card-img" src="images/olivia.png" />
+          <h2>Olivia Frisch</h2>
+          <h3>Studerar Game Creator Artist.</h3>
+          <p class="text">
             Har tillverkat grafik väl anpassad för en realtidsapplikation på
             webben.
           </p>
         </div>
       </div>
     </main>
+    <footer>
+      <div class="client">
+        <p class="logo-text">Kunden är:</p>
+        <img
+          class="logo-img"
+          src="images/logo.png"
+          alt="logo for björkå frihet"
+        />
+      </div>
+      <img class="footer-img" src="images/footer.png" alt="" />
+    </footer>
   </body>
 </html>
