--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <link rel="shortcut icon" href="TemplateData/favicon.ico" />
     <link rel="stylesheet" href="TemplateData/style.css" />
     <title>Theory of change</title>
@@ -14,28 +15,26 @@
   <body>
     <nav>
       <ul>
-        <li><a href="index.html">Hem</a></li>
-        <li><a href="about.html">Om oss</a></li>
+        <li><a href="index.html">Spela</a></li>
+        <li><a href="about.html">Om</a></li>
       </ul>
     </nav>
-    <div class="container">
-      <div class="canvas"></div>
-    </div>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width="960" height="600"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
+    <div class="unity-wrapper">
+      <div id="unity-container" class="unity-desktop">
+        <canvas id="unity-canvas" width="960" height="600"></canvas>
+        <div id="unity-loading-bar">
+          <div id="unity-logo"></div>
+          <div id="unity-progress-bar-empty">
+            <div id="unity-progress-bar-full"></div>
+          </div>
+        </div>
+        <div id="unity-warning"></div>
+        <div id="unity-footer">
+          <!-- <div id="unity-webgl-logo"></div> -->
+          <div id="unity-fullscreen-button"></div>
         </div>
       </div>
-      <div id="unity-warning"></div>
-      <div id="unity-footer">
-        <!-- <div id="unity-webgl-logo"></div> -->
-        <div id="unity-fullscreen-button"></div>
-      </div>
     </div>
-
     <script src="/app.js"></script>
   </body>
 </html>
