updated game and added logos in footer

--- a/about.html
+++ b/about.html
@@ -68,15 +68,16 @@
       </div>
     </main>
     <footer>
-      <div class="client">
-        <p class="logo-text">Kunden är:</p>
+      <div class="logos">
+        <img class="yrgo-img" src="images/yrgo.png" alt="" />
+
         <img
           class="logo-img"
-          src="images/logo.png"
+          src="images/logo2.png"
           alt="logo for björkå frihet"
         />
       </div>
-      <img class="footer-img" src="images/footer.png" alt="" />
+      <!-- <img src="images/footer.png" alt="" /> -->
     </footer>
   </body>
 </html>
