more styling and favicons

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon4.png" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/about.css" />
@@ -19,16 +20,18 @@
     </nav>
     <main>
       <div class="project-wrapper">
-        <h1>Projektbeskrivning</h1>
+        <h1>Projektet</h1>
         <p class="project-text">
           -Tillverka en fristående digital upplevelse baserat på årets tema.<br />
           -Varje disciplin ska få chansen att synas och tillföra sin specialitet
           till projektet.<br />
           -Slutprodukten ska existera på en för ändamålet byggd webbplats.<br />
-          -Sammanslaget är alltid ett goodwillprojekt med en riktig kund.<br />
+          -Sammanslaget är alltid ett goodwillprojekt mot en riktig kund, i år
+          är kunden Björk&Frihet.<br />
+          <br />
         </p>
       </div>
-
+      <h2 class="about-text">Om oss</h2>
       <div class="about-wrapper">
         <div class="card">
           <img class="card-img" src="images/alice.png" />
@@ -37,6 +40,8 @@
           <p class="text">
             Möjliggjort att spelet kan existera på webben samt arbeta med
             interaktivitet och implementation.
+            <br />
+            alinyb0404@skola.goteborg.se
           </p>
         </div>
         <div class="card">
@@ -46,6 +51,8 @@
           <p class="text">
             Lett idégenerering och designprocess, säkerställa att webbplats och
             bidrag är lätta att använda.
+            <br />
+            gabgor0127@skola.goteborg.se <br />joejan0530@skola.goteborg.se
           </p>
         </div>
         <div class="card">
@@ -54,6 +61,8 @@
           <h3>Studerar Game Creator Programmer</h3>
           <p class="text">
             Har utvecklat interaktivitet och implementera tillverkade delar.
+            <br />
+            carchr2003@skola.goteborg
           </p>
         </div>
         <div class="card">
@@ -63,19 +72,23 @@
           <p class="text">
             Har tillverkat grafik väl anpassad för en realtidsapplikation på
             webben.
+            <br />olifri2001@skola.goteborg.se
           </p>
         </div>
       </div>
     </main>
     <footer>
       <div class="logos">
-        <img class="yrgo-img" src="images/yrgo.png" alt="" />
-
-        <img
-          class="logo-img"
-          src="images/logo2.png"
-          alt="logo for björkå frihet"
-        />
+        <a href="https://www.yrgo.se">
+          <img class="yrgo-img" src="images/yrgo.png" alt="" />
+        </a>
+        <a href="https://bjorkafrihet.se/">
+          <img
+            class="logo-img"
+            src="images/logo2.png"
+            alt="logo for björkå frihet"
+          />
+        </a>
       </div>
       <!-- <img src="images/footer.png" alt="" /> -->
     </footer>
