updated game version

--- a/about.html
+++ b/about.html
@@ -22,13 +22,14 @@
       <div class="project-wrapper">
         <h1>Projektet</h1>
         <p class="project-text">
-          -Tillverka en fristående digital upplevelse baserat på årets tema.<br />
-          -Varje disciplin ska få chansen att synas och tillföra sin specialitet
-          till projektet.<br />
-          -Slutprodukten ska existera på en för ändamålet byggd webbplats.<br />
-          -Sammanslaget är alltid ett goodwillprojekt mot en riktig kund, i år
-          är kunden Björk&Frihet.<br />
+          -Sammanslaget hackaton är ett projekt med syfte att olika program ska
+          få testa på att arbeta ihop. <br />
+          -Tanken är att varje disciplin ska få chansen att synas och tillföra
+          sin specialitet till projektet. <br />
+          -Slutprodukten ska existera på en för ändamålet byggd webbplats.
           <br />
+          -Sammanslaget är ett goodwillprojekt åt en riktig kund, som i år är
+          Björk & Frihet. <br />
         </p>
       </div>
       <h2 class="about-text">Om oss</h2>
@@ -40,9 +41,8 @@
           <p class="text">
             Möjliggjort att spelet kan existera på webben samt arbeta med
             interaktivitet och implementation.
-            <br />
-            alinyb0404@skola.goteborg.se
           </p>
+          <p class="email">alinyb0404@skola.goteborg.se</p>
         </div>
         <div class="card">
           <img class="card-img" src="images/gabriel-joella.png" />
@@ -51,7 +51,8 @@
           <p class="text">
             Lett idégenerering och designprocess, säkerställa att webbplats och
             bidrag är lätta att använda.
-            <br />
+          </p>
+          <p class="email">
             gabgor0127@skola.goteborg.se <br />joejan0530@skola.goteborg.se
           </p>
         </div>
@@ -61,9 +62,8 @@
           <h3>Studerar Game Creator Programmer</h3>
           <p class="text">
             Har utvecklat interaktivitet och implementera tillverkade delar.
-            <br />
-            carchr2003@skola.goteborg
           </p>
+          <p class="email">carchr2003@skola.goteborg</p>
         </div>
         <div class="card">
           <img class="card-img" src="images/olivia.png" />
@@ -72,8 +72,8 @@
           <p class="text">
             Har tillverkat grafik väl anpassad för en realtidsapplikation på
             webben.
-            <br />olifri2001@skola.goteborg.se
           </p>
+          <p class="email">olifri2001@skola.goteborg.se</p>
         </div>
       </div>
     </main>
