--- a/index.html
+++ b/index.html
@@ -20,18 +20,26 @@
         <li><a href="about.html">Om</a></li>
       </ul>
     </nav>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width="960" height="600"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
+    <div class="mobile-game-container">
+      Hej alla besökare, ta del av upplevelsen genom att besöka våran hemsida på
+      en dator! <br />
+      <a class="about-link" href="about.html">Eller lär känna oss först</a> och
+      spela senare!
+    </div>
+    <div class="game-container">
+      <div id="unity-container" class="unity-desktop">
+        <canvas id="unity-canvas" width="960" height="600"></canvas>
+        <div id="unity-loading-bar">
+          <div id="unity-logo"></div>
+          <div id="unity-progress-bar-empty">
+            <div id="unity-progress-bar-full"></div>
+          </div>
         </div>
-      </div>
-      <div id="unity-warning"></div>
-      <div id="unity-footer">
-        <!-- <div id="unity-webgl-logo"></div> -->
-        <div id="unity-fullscreen-button"></div>
+        <div id="unity-warning"></div>
+        <div id="unity-footer">
+          <!-- <div id="unity-webgl-logo"></div> -->
+          <div id="unity-fullscreen-button"></div>
+        </div>
       </div>
     </div>
     <script src="/app.js"></script>
