--- a/about.html
+++ b/about.html
@@ -90,7 +90,9 @@
           />
         </a>
       </div>
-      <!-- <img src="images/footer.png" alt="" /> -->
+      <div class="footer-container">
+        <img class="footer-img" src="images/footer.png" alt="" />
+      </div>
     </footer>
   </body>
 </html>
