--- a/about.html
+++ b/about.html
@@ -90,9 +90,9 @@
           />
         </a>
       </div>
-      <div class="footer-container">
+      <!-- <div class="footer-container">
         <img class="footer-img" src="images/footer.png" alt="" />
-      </div>
+      </div> -->
     </footer>
   </body>
 </html>
