--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/about.css" />
     <link rel="stylesheet" href="css/footer.css" />
-    <title>Theory of change</title>
+    <title>Naturens öde - en solskenshistoria</title>
   </head>
   <body>
     <nav>
@@ -40,7 +40,7 @@
           <h3>Studerar webbutveckling</h3>
           <p class="text">
             Möjliggjort att spelet kan existera på webben samt arbeta med
-            interaktivitet och implementation.
+            responsivitet och implementation.
           </p>
           <p class="email">alinyb0404@skola.goteborg.se</p>
         </div>
@@ -49,11 +49,11 @@
           <h2>Gabriel Göransson & Joella Jantzen</h2>
           <h3>Studerar UX-design</h3>
           <p class="text">
-            Lett idégenerering och designprocess, säkerställa att webbplats och
-            bidrag är lätta att använda.
+            Lett idégenerering och designprocess samt säkerställt att webbplats
+            och bidrag är lätta att använda.
           </p>
           <p class="email">
-            gabgor0127@skola.goteborg.se <br />joejan0530@skola.goteborg.se
+            gabriel.goranssong@gmail.com <br />joellajantzen@gmail.com
           </p>
         </div>
         <div class="card">
@@ -61,9 +61,9 @@
           <h2>Carl Christensen</h2>
           <h3>Studerar Game Creator Programmer</h3>
           <p class="text">
-            Har utvecklat interaktivitet och implementera tillverkade delar.
+            Har programmerat spelet och utvecklat interaktivitet.
           </p>
-          <p class="email">carchr2003@skola.goteborg</p>
+          <p class="email">carl.christensen98@gmail.com</p>
         </div>
         <div class="card">
           <img class="card-img" src="images/olivia.png" />
