mooore small fixes

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <div class="card">
           <img class="card-img" src="images/alice.png" />
           <h2>Alice Nyberg</h2>
-          <h3 class="role">Studerar webbutveckling</h3>
+          <h3 class="role">Studerar webbutveckling.</h3>
           <p class="text">
             Möjliggjort att spelet kan existera på webben samt arbeta med
             responsivitet och implementation.
@@ -47,7 +47,7 @@
         <div class="card">
           <img class="card-img" src="images/carl.png" />
           <h2>Carl Christensen</h2>
-          <h3 class="role">Studerar Game Creator Programmer</h3>
+          <h3 class="role">Studerar Game Creator Programmer.</h3>
           <p class="text">
             Har programmerat spelet och utvecklat interaktivitet.
           </p>
@@ -56,7 +56,7 @@
         <div class="card">
           <img class="card-img" src="images/gabriel-joella.png" />
           <h2>Gabriel Göransson & Joella Jantzen</h2>
-          <h3 class="role">Studerar UX-design</h3>
+          <h3 class="role">Studerar UX-design.</h3>
           <p class="text">
             Lett idégenerering och designprocess samt säkerställt att webbplats
             och bidrag är lätta att använda.
